<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/main_title_text"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="casual"

        />



    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button_text"
        android:onClick="loginButtonClicked"

            />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_centerHorizontal="true"
            android:text="@string/signup_button_text"
            android:onClick="signUpButtonClicked"
            />

        <Button
            android:id="@+id/infoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signupButton"
            android:layout_centerHorizontal="true"
            android:text="@string/info_button_text"
            android:onClick="infoButtonClicked"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoButton"
            android:layout_centerHorizontal="true"
            android:text="@string/left_right_button_text"
            android:onClick="leftRightButtonClicked"
            />





</RelativeLayout>


