<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/info_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_name"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/info_email_text_view"

        />

    <TextView
        android:id="@+id/info_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_email"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        />

    <TextView
        android:id="@+id/info_gender_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_gender"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/info_email_text_view"

        />

    <TextView
        android:id="@+id/info_dob_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DOB"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/info_gender_text_view"

        />




</RelativeLayout>